--- a/package.json
+++ b/package.json
@@ -19,4 +19,11 @@
     "gh-pages": "^6.1.1",
     "vite": "^7.1.3"
   }
+{
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
+  }
 }
